[package]
name = "kira_me_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
serde = "1.0.111"
serde_json = "1.0.111"
sqlx = "0.7.3"
yew = { version = "0.21.0", git = "https://github.com/yewstack/yew/", features = [
    "csr",
] }
yew-router = { git = "https://github.com/yewstack/yew/", version = "0.18.0" }
