[package]
name = "kira_me_website"
version = "0.1.0"
edition = "2021"
description = "My personal website"
authors = ["Kira Hudson"]
repository = "https://github.com/QueenKiraThePansexualPixie/queenkirathepansexualpixie.github.io"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
const_panic = "0.2.8"
rayon = "1.10.0"
rstest = "0.21.0"
serde = "1.0.203"
serde_json = "1.0.118"
sqlx = "0.7.4"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
yew = { version = "0.21.0", git = "https://github.com/yewstack/yew/", features = [
    "csr",
] }
yew-router = { git = "https://github.com/yewstack/yew/", version = "0.18.0" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
